--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
             .close-3d-button {
                 display: none; /* Hide the close button in mobile view by default */
+                top: 10px;
             }
         }
 
